--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="./pages/index.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="author" content="Ksenia Ogneva" />
-    <title>Document</title>
+    <title>Mesto</title>
   </head>
   <body class="page">
     <header class="header">
