--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <p class="profile__bio">Исследователь океана</p>
           </div>
         </div>
-        <button class="profile__add-button"></button>
+        <button class="profile__add-button" type="button"></button>
       </section>
 
       <section class="elements">
@@ -36,51 +36,67 @@
           <li class="element">
             <img
               src="./images/Karachayevsk.jpg"
-              alt=""
+              alt="Карачаевск"
               class="element__photo"
             />
             <div class="element__container">
               <h2 class="element__title">Карачаевск</h2>
-              <button class="element__like"></button>
+              <button class="element__like" type="button"></button>
             </div>
           </li>
           <li class="element">
-            <img src="./images/Elbrus.jpg" alt="" class="element__photo" />
+            <img
+              src="./images/Elbrus.jpg"
+              alt="Эльбрус"
+              class="element__photo"
+            />
             <div class="element__container">
               <h2 class="element__title">Гора Эльбрус</h2>
-              <button class="element__like"></button>
+              <button class="element__like" type="button"></button>
             </div>
           </li>
           <li class="element">
-            <img src="./images/Dombay.jpg" alt="" class="element__photo" />
+            <img
+              src="./images/Dombay.jpg"
+              alt="Домбай"
+              class="element__photo"
+            />
             <div class="element__container">
               <h2 class="element__title">Домбай</h2>
-              <button class="element__like"></button>
+              <button class="element__like" type="button"></button>
             </div>
           </li>
           <li class="element">
-            <img src="./images/Elbrus.jpg" alt="" class="element__photo" />
+            <img
+              src="./images/Elbrus.jpg"
+              alt="Эльбрус"
+              class="element__photo"
+            />
             <div class="element__container">
               <h2 class="element__title">Гора Эльбрус</h2>
-              <button class="element__like"></button>
+              <button class="element__like" type="button"></button>
             </div>
           </li>
           <li class="element">
-            <img src="./images/Dombay.jpg" alt="" class="element__photo" />
+            <img
+              src="./images/Dombay.jpg"
+              alt="Домбай"
+              class="element__photo"
+            />
             <div class="element__container">
               <h2 class="element__title">Домбай</h2>
-              <button class="element__like"></button>
+              <button class="element__like" type="button"></button>
             </div>
           </li>
           <li class="element">
             <img
               src="./images/Karachayevsk.jpg"
-              alt=""
+              alt="Карачаевск"
               class="element__photo"
             />
             <div class="element__container">
               <h2 class="element__title">Карачаево-Черкесская Республика</h2>
-              <button class="element__like"></button>
+              <button class="element__like" type="button"></button>
             </div>
           </li>
         </ul>
@@ -91,10 +107,10 @@
       <p class="footer__copyright">&copy; 2023 Mesto Russia</p>
     </footer>
 
-    <div class="popup popup_type_edit">
-      <form class="popup__content">
-        <fieldset class="popup__fieldset">
-          <legend class="popup__title">Редактировать профиль</legend>
+    <div class="popup">
+      <div class="popup__container">
+        <h3 class="popup__title">Редактировать профиль</h3>
+        <form class="popup__form" name="edit">
           <input
             type="text"
             class="popup__input popup__input_type_name"
@@ -105,12 +121,12 @@
             class="popup__input popup__input_type_bio"
             name="bio"
           />
-          <button class="popup__save-button">Сохранить</button>
-        </fieldset>
-        <button class="popup__close-button"></button>
-      </form>
+          <button class="popup__save-button" type="submit">Сохранить</button>
+        </form>
+        <button class="popup__close-button" type="button"></button>
+      </div>
     </div>
 
-    <script src="./scripts/popup.js"></script>
+    <script src="./scripts/index.js"></script>
   </body>
 </html>
